update Annotation tool

--- a/ToolAnnotation/templates/index.html
+++ b/ToolAnnotation/templates/index.html
@@ -457,8 +457,14 @@
                 </div>
                 
                 <div class="control-group">
-                    <button id="saveBtn" class="btn btn-primary btn-lg">
-                        <i class="bi bi-save"></i> Save Annotations
+                    <button id="saveProgressBtn" class="btn btn-primary" data-bs-toggle="tooltip" title="Save Progress (Ctrl+S)">
+                        <i class="bi bi-save"></i> Save Progress
+                    </button>
+                    <button id="exportCsvBtn" class="btn btn-success" data-bs-toggle="tooltip" title="Export to CSV (Ctrl+E)">
+                        <i class="bi bi-file-earmark-spreadsheet"></i> Export CSV
+                    </button>
+                    <button id="loadAutoSaveBtn" class="btn btn-info" data-bs-toggle="tooltip" title="Load Auto-saved Progress">
+                        <i class="bi bi-arrow-clockwise"></i> Load Progress
                     </button>
                 </div>
             </div>
